
See UPGRADE document for incompatible changes not listed here.

Interchange 5.5.2 (unreleased).

Core
----

* Altered the DomainTail directive to take subdomains of various ccTLDs
  into account.  For example, if "foo.example.co.uk" pays a visit then
  "example.co.uk" as the domain tail will be used instead of just "co.uk".


Interchange 5.5.1 released on 2007-08-21.

Core
----

* Removed odd formatting from --add entry in interchange manual page.

* Fixed a DoS exploit. A carefully crafted HTTP POST request could cause
  an Interchange page processor to hang until it's killed by Interchange's
  periodic housekeeping routine. If several of these requests are received
  in quick succession then it could be possible to disable all of the page
  processors, rendering Interchange unresponsive for a while. Fixed by
  Kevin Walsh; pointed out by Donald Alexander.

* Removed unused AdminHost global configuration directive.

* In &Vend::Table::DBI::set_row, avoid unwanted expansion of array when we
  have PREFER_NULL fields and number of fields passed is one.

* Added Vend::Swish2 module provided by Brian Miller <brian@endpoint.com>.
  This is superior to Vend::Swish, because instead of the awkward way to
  interface with Swish-e by running the binary it uses the Swish Perl API.

  Note: This module will replace Vend::Swish after we ensure as much backward
  compatibility as possible.

* Allow specification of one additional include directory for specific
  modules, specified like this:

  Require module Vend::Swish /usr/lib/swish-e/perl

* Terminate search if mv_min_string condition isn't met.

* Make [sql-quote] list tag to work properly with multiple lines.

* Fixed case-insensitive searches for different locales.

* Fix the [error] tag so it does not attempt to replace format specifiers other
  than %s in the text or std_label attributes.

* Vend::SQL_Parser required LIMIT clause to be lowercase when it should be
  case-insensitive.
