@@ -125,6 +125,9 @@ ifdef @ROBOTS
 include /etc/interchange/robots.cfg
 endif
 
+# Include the list of country-specific "standard" subdomains
+include /etc/interchange/subdomains.cfg
+
 # Include global usertags put up by the administrator
 include /etc/interchange/usertag/*.tag
 
