@@ -16,6 +16,10 @@ Core
   into account.  For example, if "foo.example.co.uk" pays a visit then
   "example.co.uk" as the domain tail will be used instead of just "co.uk".
 
+  This is done with a new CountrySubdomains directive.  A predefined block
+  of country subdomains is listed in a new subdomains.cfg file, which
+  should be "included" into the interchange.cfg file.
+
 
 Interchange 5.5.1 released on 2007-08-21.
 
